image jumping out of canvas' fix

--- a/ComOver.css
+++ b/ComOver.css
@@ -22,6 +22,7 @@ input#fileInput {
 }
 div#gallery {
 	text-align: center;
+	white-space: nowrap;
 }
 div#imageDiv {
 	display: inline-block;
